k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunnelsats
  labels:
    app: tunnelsats
spec:
  selector:
    app: tunnelsats
  ports:
    - name: web
      port: 9739
      targetPort: 9739
  type: ClusterIP
